# NotionClassic

./: .gitignore  CMakeLists.txt  HttpClient.h  HttpResponse.h  README.md  Settings.h  emoji_names.c  fast_alloc.c  http_parser.c  icons.html  notion api test.rtf  set_has_bundle.py  uECC.c  wdef.c
assets/: 123.pict  NotionClassic.pict  activity-rectangle.pict  airplane-arrival.pict  airplane-departure.pict  airplane-transfer.pict  airplane.pict  airport-immigration.pict  alarm-clock.pict  alien-pixel.pict  alien.pict  ambulance.pict  anchor.pict  angle-brackets-solidus.pict  apple.pict  apron.pict  aquarius.pict  arch-bridge.pict  archery.pict  archive.pict  aries.pict  arrow-bounce-heavy.pict  arrow-circle-down.pict  arrow-clockwise.pict  arrow-counter-clockwise.pict  arrow-down-basic.pict  arrow-down-line.pict  arrow-down.pict  arrow-in-rectangle.pict  arrow-in-tray.pict  arrow-left-basic.pict  arrow-left-circle.pict  arrow-left-line.pict  arrow-northeast-square.pict  arrow-northeast.pict  arrow-northwest.pict  arrow-out-door.pict  arrow-out-square.pict  arrow-redirect-heavy.pict  arrow-reply-heavy.pict  (+851 more)
release/: NotionClassic.sit
src/: HttpClient.cpp  HttpResponse.cpp  RootCert.h  Settings.cpp  emoji_sprite.c  emoji_sprite.h  gason.cpp  main.cpp  net_sockets_mac.c  uecc_alt.c  wdefshell.r
